--- a/tutorial/2_SubsurfaceBayesian.ipynb
+++ b/tutorial/2_SubsurfaceBayesian.ipynb
@@ -226,12 +226,13 @@
      "collapsed": false,
      "input": [
       "import dolfin as dl\n",
-      "import sys\n",
-      "sys.path.append( \"../\" )\n",
-      "from hippylib import *\n",
+      "import math\n",
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
+      "import sys\n",
+      "sys.path.append( \"../\" )\n",
+      "from hippylib import *\n",
       "\n",
       "import nb\n",
       "\n",
@@ -523,7 +524,7 @@
       "We used the *double pass* algorithm to compute a low-rank decomposition of the Hessian Misfit.\n",
       "In particular, we solve\n",
       "\n",
-      "$$ \\Hmisfit} {\\bf u} = \\lambda \\prcov^{-1} {\\bf u}. $$\n",
+      "$$ \\Hmisfit {\\bf u} = \\lambda \\prcov^{-1} {\\bf u}. $$\n",
       "\n",
       "The Figure shows the largest *k* generalized eigenvectors of the Hessian misfit.\n",
       "The effective rank of the Hessian misfit is the number of eigenvalues above the red line (y=1).\n",
