--- a/tutorial/4_HessianSpectrum.ipynb
+++ b/tutorial/4_HessianSpectrum.ipynb
@@ -49,12 +49,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from dolfin import *\n",
-      "\n",
+      "import dolfin as dl\n",
       "import numpy as np\n",
-      "import time\n",
-      "import logging\n",
-      "\n",
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
       "import nb\n",
@@ -63,11 +59,10 @@
       "sys.path.append(\"../\")\n",
       "from hippylib import *\n",
       "\n",
-      "start = time.clock()\n",
-      "\n",
+      "import logging\n",
       "logging.getLogger('FFC').setLevel(logging.WARNING)\n",
       "logging.getLogger('UFL').setLevel(logging.WARNING)\n",
-      "set_log_active(False)"
+      "dl.set_log_active(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -85,31 +80,31 @@
      "collapsed": false,
      "input": [
       "def pde_varf(u,a,p):\n",
-      "    return k*inner(nabla_grad(u), nabla_grad(p))*dx \\\n",
-      "           + inner(nabla_grad(u), v*p)*dx \\\n",
-      "           + c*u*p*dx \\\n",
-      "           - a*p*dx\n",
+      "    return k*dl.inner(dl.nabla_grad(u), dl.nabla_grad(p))*dl.dx \\\n",
+      "           + dl.inner(dl.nabla_grad(u), v*p)*dl.dx \\\n",
+      "           + c*u*p*dl.dx \\\n",
+      "           - a*p*dl.dx\n",
       "\n",
       "def u_boundary(x, on_boundary):\n",
-      "    return on_boundary and x[1] < DOLFIN_EPS\n",
+      "    return on_boundary and x[1] < dl.DOLFIN_EPS\n",
       "\n",
       "def solve(nx,ny, targets, rel_noise, gamma, delta, verbose=True):\n",
       "    np.random.seed(seed=2)\n",
-      "    mesh = UnitSquareMesh(nx, ny)\n",
-      "    Vh1 = FunctionSpace(mesh, 'Lagrange', 1)\n",
+      "    mesh = dl.UnitSquareMesh(nx, ny)\n",
+      "    Vh1 = dl.FunctionSpace(mesh, 'Lagrange', 1)\n",
       "    \n",
       "    Vh = [Vh1, Vh1, Vh1]\n",
       "    if verbose:\n",
       "        print \"Number of dofs: STATE={0}, PARAMETER={1}, ADJOINT={2}\".format(Vh[STATE].dim(), Vh[PARAMETER].dim(), Vh[ADJOINT].dim())\n",
       "\n",
       "\n",
-      "    u_bdr = Expression(\"0.0\")\n",
-      "    u_bdr0 = Expression(\"0.0\")\n",
-      "    bc = DirichletBC(Vh[STATE], u_bdr, u_boundary)\n",
-      "    bc0 = DirichletBC(Vh[STATE], u_bdr0, u_boundary)\n",
+      "    u_bdr = dl.Expression(\"0.0\")\n",
+      "    u_bdr0 = dl.Expression(\"0.0\")\n",
+      "    bc = dl.DirichletBC(Vh[STATE], u_bdr, u_boundary)\n",
+      "    bc0 = dl.DirichletBC(Vh[STATE], u_bdr0, u_boundary)\n",
       "\n",
-      "    atrue = interpolate( Expression(\"exp( -50*(x[0] - .5)*(x[0] - .5) - 50*(x[1] - .5)*(x[1] - .5))\"), Vh[PARAMETER]).vector()\n",
-      "    a0 = interpolate(Expression(\"0.0\"), Vh[PARAMETER]).vector()\n",
+      "    atrue = dl.interpolate( dl.Expression(\"exp( -50*(x[0] - .5)*(x[0] - .5) - 50*(x[1] - .5)*(x[1] - .5))\"), Vh[PARAMETER]).vector()\n",
+      "    a0 = dl.interpolate(dl.Expression(\"0.0\"), Vh[PARAMETER]).vector()\n",
       "    \n",
       "    pde = PDEVariationalProblem(Vh, pde_varf, bc, bc0)\n",
       " \n",
@@ -132,8 +127,8 @@
       "\n",
       "    if verbose:\n",
       "        plt.figure(figsize=(18,4))\n",
-      "        nb.plot(Function(Vh[PARAMETER], atrue), mytitle = \"True source\", subplot_loc=131)\n",
-      "        nb.plot(Function(Vh[STATE], utrue), mytitle=\"True state\", subplot_loc=132)\n",
+      "        nb.plot(dl.Function(Vh[PARAMETER], atrue), mytitle = \"True source\", subplot_loc=131)\n",
+      "        nb.plot(dl.Function(Vh[STATE], utrue), mytitle=\"True state\", subplot_loc=132)\n",
       "        nb.plot_pts(targets, misfit.d,mytitle=\"Observations\", subplot_loc=133)\n",
       "        plt.show()\n",
       "    \n",
@@ -170,8 +165,8 @@
       "\n",
       "    if verbose:\n",
       "        plt.figure(figsize=(18,4))\n",
-      "        nb.plot(Function(Vh[PARAMETER], a), mytitle = \"Reconstructed source\", subplot_loc=131)\n",
-      "        nb.plot(Function(Vh[STATE], u), mytitle=\"Reconstructed state\", subplot_loc=132)\n",
+      "        nb.plot(dl.Function(Vh[PARAMETER], a), mytitle = \"Reconstructed source\", subplot_loc=131)\n",
+      "        nb.plot(dl.Function(Vh[STATE], u), mytitle=\"Reconstructed state\", subplot_loc=132)\n",
       "        nb.plot_pts(targets, misfit.B*u - misfit.d, mytitle=\"Misfit\", subplot_loc=133)\n",
       "        plt.show()\n",
       "\n",
@@ -218,9 +213,9 @@
       "gamma = 70.\n",
       "delta = 1e-1\n",
       "\n",
-      "k = Expression(\"1.0\")\n",
-      "v = Expression((\"0.0\", \"0.0\"))\n",
-      "c = Expression(\"0.\")\n",
+      "k = dl.Expression(\"1.0\")\n",
+      "v = dl.Expression((\"0.0\", \"0.0\"))\n",
+      "c = dl.Expression(\"0.\")\n",
       "\n",
       "d, U, Va, nit = solve(nx,ny, targets, rel_noise, gamma, delta)"
      ],
@@ -242,9 +237,9 @@
       "gamma = 70.\n",
       "delta = 1e-1\n",
       "\n",
-      "k = Expression(\"1.0\")\n",
-      "v = Expression((\"0.0\", \"0.0\"))\n",
-      "c = Expression(\"0.\")\n",
+      "k = dl.Expression(\"1.0\")\n",
+      "v = dl.Expression((\"0.0\", \"0.0\"))\n",
+      "c = dl.Expression(\"0.\")\n",
       "\n",
       "n = [16,32,64]\n",
       "d1, U1, Va1, niter1 = solve(n[0],n[0], targets, rel_noise, gamma, delta,verbose=False)\n",
@@ -283,9 +278,9 @@
       "gamma = 70.\n",
       "delta = 1e-1\n",
       "\n",
-      "k = Expression(\"1.0\")\n",
-      "v = Expression((\"0.0\", \"0.0\"))\n",
-      "c = Expression(\"0.\")\n",
+      "k = dl.Expression(\"1.0\")\n",
+      "v = dl.Expression((\"0.0\", \"0.0\"))\n",
+      "c = dl.Expression(\"0.\")\n",
       "\n",
       "rel_noise = [1e-3,1e-2,1e-1]\n",
       "d1, U1, Va1, niter1 = solve(nx,ny, targets, rel_noise[0], gamma, delta,verbose=False)\n",
@@ -325,14 +320,14 @@
      "input": [
       "rel_noise = 0.01\n",
       "\n",
-      "k = Expression(\"1.0\")\n",
-      "v = Expression((\"0.0\", \"0.0\"))\n",
-      "c = Expression(\"1.0\")\n",
+      "k = dl.Expression(\"1.0\")\n",
+      "v = dl.Expression((\"0.0\", \"0.0\"))\n",
+      "c = dl.Expression(\"1.0\")\n",
       "\n",
       "d1, U1, Va1, niter1 = solve(nx,ny, targets, rel_noise, gamma, delta,verbose=False)\n",
-      "k = Expression(\"0.1\")\n",
+      "k = dl.Expression(\"0.1\")\n",
       "d2, U2, Va2, niter2 = solve(nx,ny, targets, rel_noise, gamma, delta,verbose=False)\n",
-      "k = Expression(\"0.01\")\n",
+      "k = dl.Expression(\"0.01\")\n",
       "d3, U3, Va3, niter3 = solve(nx,ny, targets, rel_noise, gamma, delta,verbose=False)\n",
       "\n",
       "print \"Number of Iterations: \", niter1, niter2, niter3\n",
