--- a/tutorial/3_AdvectionDiffusionBayesian.ipynb
+++ b/tutorial/3_AdvectionDiffusionBayesian.ipynb
@@ -120,12 +120,13 @@
      "collapsed": false,
      "input": [
       "import dolfin as dl\n",
-      "import sys\n",
-      "sys.path.append( \"../\" )\n",
-      "from hippylib import *\n",
+      "import math\n",
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
+      "import sys\n",
+      "sys.path.append( \"../\" )\n",
+      "from hippylib import *\n",
       "sys.path.append( \"../applications/ad_diff/\" )\n",
       "from model_ad_diff import TimeDependentAD\n",
       "\n",
@@ -289,7 +290,7 @@
      "collapsed": false,
      "input": [
       "a0 = true_initial_condition.copy()\n",
-      "modelVerify(problem, a0, 1e-12)"
+      "modelVerify(problem, a0, 1e-12, is_quadratic=True)"
      ],
      "language": "python",
      "metadata": {},
