--- a/tutorial/4_HessianSpectrum.ipynb
+++ b/tutorial/4_HessianSpectrum.ipynb
@@ -103,7 +103,7 @@
       "    bc = dl.DirichletBC(Vh[STATE], u_bdr, u_boundary)\n",
       "    bc0 = dl.DirichletBC(Vh[STATE], u_bdr0, u_boundary)\n",
       "\n",
-      "    atrue = dl.interpolate( dl.Expression(\"exp( -50*(x[0] - .5)*(x[0] - .5) - 50*(x[1] - .5)*(x[1] - .5))\"), Vh[PARAMETER]).vector()\n",
+      "    atrue = dl.interpolate( dl.Expression('min(0.5,exp(-100*(pow(x[0]-0.35,2) +  pow(x[1]-0.7,2))))'), Vh[PARAMETER]).vector()\n",
       "    a0 = dl.interpolate(dl.Expression(\"0.0\"), Vh[PARAMETER]).vector()\n",
       "    \n",
       "    pde = PDEVariationalProblem(Vh, pde_varf, bc, bc0)\n",
