--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,7 +15,13 @@ $$/   $$/ $$$$$$/ $$/       $$/           $$/     $$/ $$/ $$$$$$$/
 
                           https://hippylib.github.io
                            
-Version 1.0, released on Apr 1, 2016
+Version 1.0.1, released on Aug 25, 2016
+=====================================
+
+- Add support in hippylib.Model and hippylib.Misfit for misfit functional with explicit dependence on the parameter
+
+
+Version 1.0, released on Aug 8, 2016
 =====================================
 
 - Uploaded to https://hippylib.github.io.
