Use SquareMesh instead of RectangularMesh in Fenics_101 notebook

--- a/tutorial/1_FEniCS101.ipynb
+++ b/tutorial/1_FEniCS101.ipynb
@@ -113,7 +113,7 @@
      "input": [
       "n = 16\n",
       "degree = 1\n",
-      "mesh = RectangleMesh(0, 0, 1, 1, n, n)\n",
+      "mesh = UnitSquareMesh(n, n)\n",
       "nb.plot(mesh)\n",
       "\n",
       "Vh  = FunctionSpace(mesh, 'Lagrange', degree)\n",
@@ -316,7 +316,7 @@
      "collapsed": false,
      "input": [
       "def compute(n, degree):\n",
-      "    mesh = RectangleMesh(0, 0, 1, 1, n, n)\n",
+      "    mesh = UnitSquareMesh(n, n)\n",
       "    Vh  = FunctionSpace(mesh, 'Lagrange', degree)\n",
       "    boundary_parts = FacetFunction(\"size_t\", mesh)\n",
       "    boundary_parts.set_all(0)\n",
