Support linear forward solvers

--- a/tutorial/3_SubsurfaceBayesian.ipynb
+++ b/tutorial/3_SubsurfaceBayesian.ipynb
@@ -335,7 +335,7 @@
       "def pde_varf(u,a,p):\n",
       "    return dl.exp(a)*dl.inner(dl.nabla_grad(u), dl.nabla_grad(p))*dl.dx - f*p*dl.dx\n",
       "    \n",
-      "pde = PDEVariationalProblem(Vh, pde_varf, bc, bc0)"
+      "pde = PDEVariationalProblem(Vh, pde_varf, bc, bc0, is_fwd_linear=True)"
      ],
      "language": "python",
      "metadata": {},
