--- a/tutorial/5_HessianSpectrum.ipynb
+++ b/tutorial/5_HessianSpectrum.ipynb
@@ -106,7 +106,7 @@
       "    atrue = dl.interpolate( dl.Expression('min(0.5,exp(-100*(pow(x[0]-0.35,2) +  pow(x[1]-0.7,2))))'), Vh[PARAMETER]).vector()\n",
       "    a0 = dl.interpolate(dl.Expression(\"0.0\"), Vh[PARAMETER]).vector()\n",
       "    \n",
-      "    pde = PDEVariationalProblem(Vh, pde_varf, bc, bc0)\n",
+      "    pde = PDEVariationalProblem(Vh, pde_varf, bc, bc0, is_fwd_linear=True)\n",
       " \n",
       "    if verbose:\n",
       "        print \"Number of observation points: {0}\".format(targets.shape[0])\n",
