--- a/tutorial/2_PoissonDeterministic.ipynb
+++ b/tutorial/2_PoissonDeterministic.ipynb
@@ -334,7 +334,7 @@
       "MAX = ud.vector().norm(\"linf\")\n",
       "noise = Vector()\n",
       "goal_A.init_vector(noise,1)\n",
-      "noise.set_local( noise_level * MAX * np.random.normal(0, 1, len(ud.vector().array())) )\n",
+      "Random.normal(noise, noise_level * MAX, True)\n",
       "bc_adj.apply(noise)\n",
       "\n",
       "ud.vector().axpy(1., noise)\n",
