--- a/tutorial/3_SubsurfaceBayesian.ipynb
+++ b/tutorial/3_SubsurfaceBayesian.ipynb
@@ -264,8 +264,7 @@
       "    prior = BiLaplacianPrior(Vh, gamma, delta, anis_diff )\n",
       "    noise = dl.Vector()\n",
       "    prior.init_vector(noise,\"noise\")\n",
-      "    noise_size = noise.array().shape[0]\n",
-      "    noise.set_local( np.random.randn( noise_size ) )\n",
+      "    Random.normal(noise, 1., True)\n",
       "    atrue = dl.Vector()\n",
       "    prior.init_vector(atrue, 0)\n",
       "    prior.sample(noise,atrue)\n",
@@ -598,7 +597,6 @@
       "nsamples = 5\n",
       "noise = dl.Vector()\n",
       "posterior.init_vector(noise,\"noise\")\n",
-      "noise_size = noise.array().shape[0]\n",
       "s_prior = dl.Function(Vh[PARAMETER], name=\"sample_prior\")\n",
       "s_post = dl.Function(Vh[PARAMETER], name=\"sample_post\")\n",
       "\n",
@@ -607,7 +605,7 @@
       "ps_min   = -2*math.sqrt( post_pw_variance.max() ) + posterior.mean.min()\n",
       "\n",
       "for i in range(nsamples):\n",
-      "    noise.set_local( np.random.randn( noise_size ) )\n",
+      "    Random.normal(noise, 1., True)\n",
       "    posterior.sample(noise, s_prior.vector(), s_post.vector())\n",
       "    plt.figure(figsize=(15,5))\n",
       "    nb.plot(s_prior, subplot_loc=121,mytitle=\"Prior sample\", vmin=-range_pr, vmax=range_pr)\n",
