--- a/tutorial/4_AdvectionDiffusionBayesian.ipynb
+++ b/tutorial/4_AdvectionDiffusionBayesian.ipynb
@@ -429,7 +429,6 @@
       "nsamples = 5\n",
       "noise = dl.Vector()\n",
       "posterior.init_vector(noise,\"noise\")\n",
-      "noise_size = noise.array().shape[0]\n",
       "s_prior = dl.Function(Vh, name=\"sample_prior\")\n",
       "s_post = dl.Function(Vh, name=\"sample_post\")\n",
       "\n",
@@ -439,7 +438,7 @@
       "ps_min = -2.5*math.sqrt( post_pw_variance.max() ) + posterior.mean.min()\n",
       "\n",
       "for i in range(nsamples):\n",
-      "    noise.set_local( np.random.randn( noise_size ) )\n",
+      "    Random.normal(noise, 1., True)\n",
       "    posterior.sample(noise, s_prior.vector(), s_post.vector())\n",
       "    plt.figure(figsize=(15,5))\n",
       "    nb.plot(s_prior, subplot_loc=121,mytitle=\"Prior sample\", vmin=pr_min, vmax=pr_max)\n",
