Fix the notebooks

--- a/tutorial/2_PoissonDeterministic.ipynb
+++ b/tutorial/2_PoissonDeterministic.ipynb
@@ -192,8 +192,7 @@
       "\n",
       "- <a href=\"http://fenicsproject.org/\">FEniCS</a>, a parallel finite element element library for the discretization of partial differential equations\n",
       "- <a href=\"http://www.mcs.anl.gov/petsc/\">PETSc</a>, for scalable and efficient linear algebra operations and solvers\n",
-      "- <a href=\"http://matplotlib.org/\">Matplotlib</a>, a python package used for plotting the results\n",
-      "- <a href=\"http://www.numpy.org/\">Numpy</a>, a python package for linear algebra"
+      "- <a href=\"http://matplotlib.org/\">Matplotlib</a>, a python package used for plotting the results"
      ]
     },
     {
@@ -215,7 +214,6 @@
       "sys.path.append( \"../\" )\n",
       "from hippylib import *\n",
       "\n",
-      "import numpy as np\n",
       "import time\n",
       "import logging\n",
       "\n",
@@ -227,9 +225,7 @@
       "\n",
       "logging.getLogger('FFC').setLevel(logging.WARNING)\n",
       "logging.getLogger('UFL').setLevel(logging.WARNING)\n",
-      "set_log_active(False)\n",
-      "\n",
-      "np.random.seed(seed=1)"
+      "set_log_active(False)"
      ],
      "language": "python",
      "metadata": {},
