--- a/tutorial/3_SubsurfaceBayesian.ipynb
+++ b/tutorial/3_SubsurfaceBayesian.ipynb
@@ -488,7 +488,7 @@
      "input": [
       "a0 = prior.mean.copy()\n",
       "solver = ReducedSpaceNewtonCG(model)\n",
-      "solver.parameters[\"rel_tolerance\"] = 1e-9\n",
+      "solver.parameters[\"rel_tolerance\"] = 1e-6\n",
       "solver.parameters[\"abs_tolerance\"] = 1e-12\n",
       "solver.parameters[\"max_iter\"]      = 25\n",
       "solver.parameters[\"inner_rel_tolerance\"] = 1e-15\n",
@@ -539,7 +539,10 @@
       "k = 50\n",
       "p = 20\n",
       "print \"Single/Double Pass Algorithm. Requested eigenvectors: {0}; Oversampling {1}.\".format(k,p)\n",
-      "Omega = np.random.randn(x[PARAMETER].array().shape[0], k+p)\n",
+      "\n",
+      "Omega = MultiVector(x[PARAMETER], k+p)\n",
+      "for i in range(k+p):\n",
+      "    Random.normal(Omega[i], 1., True)\n",
       "d, U = doublePassG(Hmisfit, prior.R, prior.Rsolver, Omega, k)\n",
       "\n",
       "posterior = GaussianLRPosterior(prior, d, U)\n",
