--- a/tutorial/4_AdvectionDiffusionBayesian.ipynb
+++ b/tutorial/4_AdvectionDiffusionBayesian.ipynb
@@ -135,9 +135,7 @@
       "import logging\n",
       "logging.getLogger('FFC').setLevel(logging.WARNING)\n",
       "logging.getLogger('UFL').setLevel(logging.WARNING)\n",
-      "dl.set_log_active(False)\n",
-      "\n",
-      "np.random.seed(1)"
+      "dl.set_log_active(False)"
      ],
      "language": "python",
      "metadata": {},
@@ -335,7 +333,9 @@
       "k = 80\n",
       "p = 20\n",
       "print \"Single Pass Algorithm. Requested eigenvectors: {0}; Oversampling {1}.\".format(k,p)\n",
-      "Omega = np.random.randn(a.array().shape[0], k+p)\n",
+      "Omega = MultiVector(x[PARAMETER], k+p)\n",
+      "for i in range(k+p):\n",
+      "    Random.normal(Omega[i], 1., True)\n",
       "d, U = singlePassG(H, prior.R, prior.Rsolver, Omega, k)\n",
       "\n",
       "\n",
