--- a/tutorial/5_HessianSpectrum.ipynb
+++ b/tutorial/5_HessianSpectrum.ipynb
@@ -89,7 +89,7 @@
       "    return on_boundary and x[1] < dl.DOLFIN_EPS\n",
       "\n",
       "def solve(nx,ny, targets, rel_noise, gamma, delta, verbose=True):\n",
-      "    np.random.seed(seed=2)\n",
+      "    Random.seed(2)\n",
       "    mesh = dl.UnitSquareMesh(nx, ny)\n",
       "    Vh1 = dl.FunctionSpace(mesh, 'Lagrange', 1)\n",
       "    \n",
@@ -122,7 +122,7 @@
       "    misfit.B.mult(x[STATE], misfit.d)\n",
       "    MAX = misfit.d.norm(\"linf\")\n",
       "    noise_std_dev = rel_noise * MAX\n",
-      "    randn_perturb(misfit.d, noise_std_dev)\n",
+      "    Random.normal(misfit.d, noise_std_dev, False)\n",
       "    misfit.noise_variance = noise_std_dev*noise_std_dev\n",
       "\n",
       "    if verbose:\n",
@@ -175,7 +175,9 @@
       "    p_evec = 5\n",
       "    if verbose:\n",
       "        print \"Double Pass Algorithm. Requested eigenvectors: {0}; Oversampling {1}.\".format(k_evec,p_evec)\n",
-      "    Omega = np.random.randn(a.array().shape[0], k_evec+p_evec)\n",
+      "    Omega = MultiVector(x[PARAMETER], k_evec+p_evec)\n",
+      "    for i in range(Omega.nvec()):\n",
+      "        Random.normal(Omega[i], 1., True)\n",
       "    d, U = doublePassG(H, reg.R, reg.Rsolver, Omega, k_evec)\n",
       "\n",
       "    if verbose:\n",
