--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,12 @@ $$/   $$/ $$$$$$/ $$/       $$/           $$/     $$/ $$/ $$$$$$$/
 
                           https://hippylib.github.io
                           
+Version 1.1.0, released on Nov 28, 2016
+=======================================
+
+- Add partial support for FEniCS 2016.1 (Applications and Tutorial)
+- Improve performance of the randomized eigensolvers
+
 Version 1.0.2, released on Sep 30, 2016
 =======================================
 
